# chatbot-using-IBM-watson

./: .gitignore  README.md  poc-presentation.md  pyproject.toml  requirements.txt  web_chatbot.py
cli_chatbot/: __init__.py  calculadora.py  chat_history.py  main.py  watson_client.py
prompts/: base_prompt.txt
